# DLAMP.data

./: .gitignore  .init.sh  .init_dlamp.sh  Code.md  DLAMPreProc.py  DLAMPreproc.py  GEMINI.md  README.SFNO.md  README.md  SFNOPreproc.py  data_pipeline_review.md  dlampDATA_overview_20251025_220541.txt  dlamp_prep.py  earth2studio_plan.md  era5_partab.txt  main.py  pyproject.toml  requirements.txt  updated.py
.specify/memory/: constitution.md
assets/: rwrf_Vtable.csv  search_keyword.sh  validate_vars.py
config/: era5.yaml  gfs.yaml  integrated_workflow.yaml  sfno.yaml
config/opflows/: workflows.yaml
src/: cds_downloader.py  dlamp_regridder.py
src/dataLoader/: ecmwf_era5.py
src/op/: README.md  diagnostics.py  era5_reanalysis.py  global_operators.py  regridders.py  workflow_engine.py
src/op/utils/: file_utils.py
src/preproc/: cds_downloader.py  dlamp_regridder.py  sfno_processor.py
src/registry/: diagnostic_functions.py  diagnostic_registry.py
src/workflow/: global_op.py
src/workflows/: data_processing.py  sfno_forecast.py
