[project]
name = "dlamp-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earth2studio[data,sfno]",
    "pip>=25.3",
]

[tool.uv.sources]
earth2studio = { git = "https://github.com/NVIDIA/earth2studio.git", rev = "0.9.0" }
